[package]
name = "gui_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.4"
winit = "0.29"
image = "0.25"
drawlib = { path = "../leo-libs/drawlib" }
mathlib = { path = "../leo-libs/mathlib" }
ttflib = { path = "../leo-libs/ttflib" }
# pnglib = { path = "../leo-libs/pnglib" }
